force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <label>Payment</label>
    <nameField>
        <label>Payment ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>