force-app/main/default/objects/Payment__c/fields/last_lesson_date__c.field-meta.xml
<CustomField>
    <fullName>last_lesson_date__c</fullName>
    <label>last lesson date</label>
    <type>Date</type>
</CustomField>