force-app/main/default/objects/Payment__c/fields/Method_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Payment__c</fullName>
    <label>Method of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>NETS</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Offline Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>