force-app/main/default/objects/Payment__c/fields/MovedToSage__c.field-meta.xml
<CustomField>
    <fullName>MovedToSage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MovedToSage</label>
    <type>Checkbox</type>
</CustomField>