force-app/main/default/objects/Payment__c/fields/NETS_code__c.field-meta.xml
<CustomField>
    <fullName>NETS_code__c</fullName>
    <label>NETS code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>