force-app/main/default/objects/Payment__c/fields/Other_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Other_Reasons__c</fullName>
    <label>Other Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>