force-app/main/default/objects/Payment__c/fields/Pay_number_backend__c.field-meta.xml
<CustomField>
    <fullName>Pay_number_backend__c</fullName>
    <displayFormat>Pay-{0000}</displayFormat>
    <label>Pay number(backend)</label>
    <type>AutoNumber</type>
</CustomField>