force-app/main/default/objects/Payment__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Admin Error</fullName>
            </value>
            <value>
                <fullName>Teacher MC</fullName>
            </value>
            <value>
                <fullName>Promo Referral</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>