force-app/main/default/objects/Payment__c/fields/Reference_Charge_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Charge_Id__c</fullName>
    <description>this field use for is customer pay amount  with offline card .</description>
    <label>Reference Charge Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>