force-app/main/default/objects/Payment__c/fields/Refund_Id__c.field-meta.xml
<CustomField>
    <fullName>Refund_Id__c</fullName>
    <description>This Field is Use to store the refund Id of the Stripe. If Refund request has been submitted by the customer.</description>
    <label>Refund Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>