force-app/main/default/objects/Payment__c/fields/SagePaymentKey__c.field-meta.xml
<CustomField>
    <fullName>SagePaymentKey__c</fullName>
    <label>SagePaymentKey</label>
    <length>20</length>
    <type>Text</type>
</CustomField>