force-app/main/default/objects/Payment__c/fields/Stripe_fees__c.field-meta.xml
<CustomField>
    <fullName>Stripe_fees__c</fullName>
    <label>Stripe fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>