force-app/main/default/objects/Payment__c/fields/Stripe_Link__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://dashboard.stripe.com/payments/&quot;+ Transaction_ID__c , Transaction_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe Charge Id</label>
    <type>Text</type>
</CustomField>