force-app/main/default/objects/Payment__c/fields/Stripe_Payout_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payout_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Payout Id</label>
    <referenceTo>Stripe_Payout_Log__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>