force-app/main/default/objects/Payment__c/recordTypes/Credit_Note_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Credit_Note_Transaction</fullName>
    <active>true</active>
    <label>Payment As Discount</label>
</RecordType>