force-app/main/default/objects/Payment__c/recordTypes/Payment_As_Credit.recordType-meta.xml
<RecordType>
    <fullName>Payment_As_Credit</fullName>
    <active>true</active>
    <label>Payment As Credit</label>
</RecordType>