force-app/main/default/objects/Payment__c/recordTypes/Payment_As_Deposit.recordType-meta.xml
<RecordType>
    <fullName>Payment_As_Deposit</fullName>
    <active>true</active>
    <label>Payment As Deposit</label>
</RecordType>