force-app/main/default/objects/Payment__c/recordTypes/Payment_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Payment_Transaction</fullName>
    <active>true</active>
    <label>Payment Transaction</label>
</RecordType>