force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Account__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Remarks__c</columns>
    <columns>Transaction_ID__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Payment__c.Payment_As_Deposit</value>
    </filters>
    <filters>
        <field>Method_of_Payment__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>