force-app/main/default/objects/Payment__c/listViews/Pending_Refund.listView-meta.xml
<ListView>
    <fullName>Pending_Refund</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Payment__c.Refund</value>
    </filters>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Payment_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Pending Refund</label>
</ListView>